SVN
---

XML:   Resolved issue CASTOR-1896 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Removed (illegal) underscores from calls to PropertyChangeListeners.
       Details: http://jira.codehaus.org/browse/CASTOR-1896
       (Werner - 20070502)

XML:   Resolved issue CASTOR-1957 using contribution from Paul Philion [philion@gmail.com]
       Switched logging for Unmarshaller/UnmarshalHandler to commons-logging.
       Details: http://jira.codehaus.org/browse/CASTOR-1957
       (Werner - 20070430)

XML:   Resolved issue CASTOR-1947 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with access to values stored in ehcache related to expiration.
       Details: http://jira.codehaus.org/browse/CASTOR-1947
       (Werner - 20070429)

XML:   Resolved issue CASTOR-1921 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Improved handling of global/local element collisions with identical type for automatic class 
       conflict resolution.
       Details: http://jira.codehaus.org/browse/CASTOR-1955
       (Werner - 20070426)

XML:   Resolved issue CASTOR-1921 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed incorrect Java version number (as used in Marshaller).
       Details: http://jira.codehaus.org/browse/CASTOR-1921
       (Werner - 20070425)

XML:   Resolved issue CASTOR-1954 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       XML code generator does not create property* methods for enumerations anymore.
       Details: http://jira.codehaus.org/browse/CASTOR-1954
       (Werner - 20070425)


Version 1.1.1, Apr 22, 2007
-------------------------------

XML:   Resolved issue CASTOR-1945 using contribution from Doug Daniels [Daniels.Douglas@gmail.com]
       Fixed problem with 'time' type handling in XML instance to schema generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1945
       (Werner - 20070418)
