@@ -240,3 +240,8 @@ org.exolab.castor.jdo.sqlserver.ansi-compliant=false
 # defaults to false
 org.exolab.castor.xml.lenient.sequence.order=false
         
+#
+# Property specifying whether id/href validation should be lenient;
+# defaults to false
+org.exolab.castor.xml.lenient.id.validation=false
+        
